# prompt_wrangler

./: .gitignore  Health_Prompt_Wrangler_Challenge.txt  README.md  example.env  main.py  prompt_wrangler_implementation_plan.md  pyproject.toml  requirements.txt  system_prompt.txt  test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt  test_case_6.txt  user_prompt.txt
app/: main.py
app/models/: config.py  input.py  output.py
app/services/: openai_service.py
app/tests/: conftest.py  test_models.py  test_services.py  test_utils.py
app/utils/: cli.py  logging.py  metrics.py
